corpus/cpp/pointer_reference/case-01/snapshots/gcc15_plus/dual_sink_structured/render.verbose.txt
error: [incomplete_type] invalid pointer or reference operation @ src/main.cpp:5:16
help: provide the full type definition via #include or fix the value category
name: struct Node
use : return node->value;
need: complete definition of 'struct Node'
from: src/main.cpp:1:8 struct Node;
| src/main.cpp:5:16
|     return node->value;
|                ^
debug: rule_id=rule.family.pointer_reference.message_terms
debug: matched_conditions=message_contains=incomplete type, message_contains=invalid use of incomplete type, phase=semantic
raw: rerun with --formed-profile=raw_fallback to inspect the original compiler output